
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2018 SEP 08b
   * in cycle/share/cycle_share.c
     - in update_linked_nodes(), made sure buffersize can not be higher than INT_MAX
     - in update_linked_nodes(), improved MPI performance by not sending and receiving within
       the same loop: now, the packets are all sent, and then all received
   * in cycle/share/tsemf_share.c
     - in update_dUstar_emfield_SOR_backward, made sure buffersize can not be higher than INT_MAX
   * in cycle/tsemf/_GS/tsemf.c
     - in update_dUstar_emfield_SOR2_forward(), made sure buffersize can not be higher than INT_MAX


2018 SEP 08a
   * in cycle/share/cycle_share.c
     - in update_linked_nodes(), changed MPI_Isend by MPI_Bsend
       o added buffer and calls to MPI_Buffer_attach 
   * in bin/periodic_domain_3D.wrp
     - added dependence on mf


2018 SEP 07a
   * in cycle/share/cycle_share.c
     - in update_linked_nodes(), fixed a memory leak bug: after calling MPI_Isend(), need to free 
       the MPI_Request1 variable 
   * in src/bdry.c
     - in read_bdry_actions(), fixed a bug related to checking the link dimension 


2018 SEP 01a
   * in bin
     - added periodic_domain_3D.wrp
   * in cycle/share/cycle_share.c
     - in update_linked_nodes(), added cntlink loop that goes from 0 to _num_node_link()
     - added lbdry parameter to _al_link() and to _nodes_between_link_and_bdry_limited()
     - added parameter cntlink to calls to _node_link()
   * in cycle/share/res_share.c
     - added parameter cntlink to calls to _node_link()
   * in src/bdry.c
     - in read_bdry_actions() added error message should linkdim not be within 1 and nd
     - added parameter cntlink to calls to _node_link()
     - in display_node_type_window(), got rid of message that boundary nodes greater than 9 will be